[package]
name = "idasen"
version = "0.1.4"
authors = ["Andrzej Klajnert <github@aklajnert.pl>"]
edition = "2018"
license = "MIT"
description = "Control IKEA IDÅSEN standing desk via Bluetooth."
homepage = "https://github.com/aklajnert/idasen"
repository = "https://github.com/aklajnert/idasen"
readme = "README.md"
keywords = ["bluetooth", "ikea", "idasen", "standing-desk"]
exclude = [".github/workflows",]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.7.2"
uuid = "0.8.2"
failure = "0.1.8"
failure_derive = "0.1.8"
indicatif = "0.15.0"
