[package]
name = "idasen"
version = "0.2.0"
authors = ["Andrzej Klajnert <github@aklajnert.pl>"]
edition = "2018"
license = "MIT"
description = "Control IKEA IDÅSEN standing desk via Bluetooth."
homepage = "https://github.com/aklajnert/idasen"
repository = "https://github.com/aklajnert/idasen"
readme = "README.md"
keywords = ["bluetooth", "ikea", "idasen", "standing-desk"]
exclude = [".github/workflows",]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.1"
indicatif = "0.16.2"
thiserror = "1.0.30"
tokio = "1.16.1"
tokio-stream = "0.1.8"
uuid = "0.8.2"
